--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
    <head>
       <meta charset="utf8/>
-      <title>
-      HOLA WWW
-      </title>
+      <title>HOLA WWW</title>
    </head>
-   <body>
+      <body>
      
-   </body>
+      </body>
 </html>
