--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <¡doctype html>
 <html>
-   <head>
-      <meta charset="utf8/>
-      <title>HOLA WWW</title>
-   </head>
-   <body></body>
+    <head>
+       <meta charset="utf8/>
+       <title>HOLA WWW</title>
+    </head>
+         <body>
+                     
+          </body>
 </html>
  
