--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
     <head>
        <meta charset="utf8/>
-       <title>HOLA WWW</title>
+       <title>Hola WWW</title>
     </head>
-         <body>
-                     
-          </body>
+    <body>
+    </body>
 </html>
  
