--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
        <title>Hola WWW</title>
     </head>
     <body>
+                      <a href="cordobapatrimonio/index.html">CORDOBA PATRIMONIO</a>
     </body>
 </html>
  
