--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <¡doctype html>
+<html><¡Doctype html>
 <html>
    <head>
-      <meta charset="utf8/>
-      <title>Hola WWW</title>
+      < meta charset = " utf8 />
+      <title> Hola WWW </title>
    </head>
-   <body>
-      <a href="cordobapatrimonio/index.html">CORDOBA PATRIMONIO</a>
+   <head>
+      <a href= "cordobapatrimonio / index.html"> CÓRDOBA PATRIMONIO </a>
     </body>
- </html>
- 
+</html>
