--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <title> Hola WWW </title>
    </head>
    <head>
-      <a href= "cordobapatrimonio / index.html"> CÓRDOBA PATRIMONIO </a>
+   </head>
+    <body>                   
     </body>
 </html>
