--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <¡doctype html>
-<html><¡Doctype html>
+<html lang="es">
 <html>
    <head>
-      < meta charset = " utf8 />
-      <title> Hola WWW </title>
+           < meta charset = " utf8 />
+           <title>Mi primera pagina web</title>
    </head>
-    <body>                   
+    <body> 
+     Hola WWW                        
     </body>
 </html>
