--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <html>
    <head>
-           < meta charset = " utf8 />
+           < meta charset="utf8">
            <title>Mi primera pagina web</title>
    </head>
     <body> 
