--- a/index.html
+++ b/index.html
@@ -1,38 +1,21 @@
-<¡ DOCTYPE html>
-
-<html lang="es">
-   <head>
-    <title>turismo de cordoba</title>
-	<meta charset="utf8">
-	<meta name"description" concep="ciudad patrimonio">
-	<meta name="keywords" concep=" turismo, patrimonio, viajes">
-	<!--link rel=" stylesheet href="estilos.css"-->
-<head>
-  <body>
-    <main>
-	   <heder>
-	   cordoba ciudad patrimonio
-	   </header>
-	   <nav>
-	   La Mesquita |Casco historico|Los Patios| Media Azahara| Contacto
-	   </nav>
-	     <sections>
-		    <article>
-			contenido noticia 1
-			</article>
-			<article>
-			contenido noticia 2
-			</article>
-		    </setion>
-		   <aside>
-		   I.E.S Gran Capitan
-		   </aside>
-		   <footer>
-		   &copy: Evelyn Veramendi Flores
-		   </footer>
-	</main>
-  </body>
-</html>
-		   
+<¡DOCTYPE html>
+< html  lang = " es " >
+< html >
+   < head >
+           < meta  charset = " utf8 " >
+           < título > Mi primera pagina web </ título >
+    </head >
+    < body >
+	    "
+	     Veramendi Evelyn
+		     "
+       <br>
+	   <a href="1.pdf">Actividad 1</a>
+	   <br>
+	   <a href="Primera Practica.html">Actividad 2</a>
 	   
+	 
+    </ body >
+	<body
+</ html >
   
