--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
    <head>
            <meta charset="utf8">
-           < título > Mi primera pagina web </ título >
+	   <title>Mi primera pagina web</title>
     </head >
     <body>
 	    "
@@ -15,7 +15,7 @@
 	   <a href="Primera Practica.html">Actividad 2</a>
 	   
 	 
-    </ body >
+    </body>
 	<body>
 </ html >
   
