--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<!--link rel=" stylesheet href="estilos.css"-->
 <head>
   <body>
+	  
+	  
+	  <a href="DOCUMENTO PERSONAL_LaTex.pdf">Actividada 1</a>
     <main>
 	   <heder>
 	   cordoba ciudad patrimonio
