--- a/index.html
+++ b/index.html
@@ -2,17 +2,37 @@
 <html lang="es">
 <html>
    <head>
-           <meta charset="utf8">
+	   <meta charset="UTF-8">
+	   <meta name="descrition" content="Pagina Personal de Evelyn Veramendi">
            <title>Mi primera pagina web</title>
     </head>
     <body>
-	    "
-	     Veramendi Evelyn
-		     "
-       <br>
-	   <a href="1.pdf">Actividad 1</a>
-	   <br>
-	   <a href="Primera Practica.html">Actividad 2</a>
+	<header>
+		<h1 id="align="center">Evelyn Veramendi</h1>
+	</header>
+	<section align="center">
+        <article>
+        <header>
+	<b>
+	 <h3>Secciones</h3>
+        </b>
+        </header>
+	  <p></p>    
+	  <h4>
+	     ". "
+		 <a href="LM/index.html" target="_blank">Lenguaje de Marcas</a>
+	  </h4>
+	   <p></p>
+	  </article>
+	  </section>
+							<aside></aside>
+<footer>
+    <addres>
+	"Cordoba,SPain"
+		       <p>Evelyn Veramendi</p>
+		 
+		       </addres>
+		       </footer>
 	   
 	 
     </body>
