--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	  <p></p>    
 	  <h4>
 	     ". "
-		 <a href="LM/index.html" target="_blank">Lenguaje de Marcas</a>
+		 <a href="lm/index.html">Lenguaje de Marcas</a>
 	  </h4>
 	   <p></p>
 	  </article>
