--- a/lm/index.html
+++ b/lm/index.html
@@ -21,11 +21,11 @@
 	          <p></p>    
 	  <h4> 
           <nav>
-                <li><a href="cordoba patrimonio.html">Cordoba Patrimonio</a></li>
-                <li><a href="tema1.html">Tema 1</a></li>
-                <li><a href="tema2.html">Tema 2</a></li>
-                <li><a href="tema3.html">Tema 3</a></li>
-                <li><a href="tema4.html">Tema 4</a></li>
+                <li><a href="cordobapatrimonio/index.html"Cordoba Patrimonio</a></li
+                <li><a href="tema1/html">Tema 1</a></li>
+                <li><a href="tema2/html">Tema 2</a></li>
+                <li><a href="tema3/html">Tema 3</a></li>
+                <li><a href="tema4/html">Tema 4</a></li>
         </nav>
 	  </h4>
 	   <p></p>
