--- a/lm/index.html
+++ b/lm/index.html
@@ -16,12 +16,13 @@
               <b>
                 <h3>Temas</h3>
               </b>
+			       <br><a href="cordobapatrimonio/html"Cordoba Patrimonio</a></br>
             </header>
 	
 	          
 	    <p></p>
         <nav>
-	        <li><a href="cordobapatrimonio/index.html"Cordoba Patrimonio</a></li>
+	        
                 <li><a href="tema1/html">Tema 1</a></li>
                 <li><a href="tema2/html">Tema 2</a></li>
                 <li><a href="tema3/html">Tema 3</a></li>
