--- a/lm/index.html
+++ b/lm/index.html
@@ -12,6 +12,7 @@
 	</header>
 	<section align="center">
         <article>
+			        <br><a href="cordobapatrimonio/html"Cordoba Patrimonio</a></br>
             <header>
               <b>
                 <h3>Temas</h3>
