--- a/lm/index.html
+++ b/lm/index.html
@@ -22,7 +22,7 @@
          </b>
         
          <p>
-         <a href="lm/index.html">Lenguaje de Marca</a>
+         <a href="font/index.html">Lenguaje de Marca</a>
          </p>
          <p>
             <i class="material-icons"font-size="40px">rss_feed</i>
