--- a/lm/lm/index.html
+++ b/lm/lm/index.html
@@ -22,7 +22,7 @@
           
         </b>
          <p>
-         <a href="lm/lm/index.html"></a>
+         <a href="lm/index.html"></a>
          </p>
          <p><a href="../index.html">Volver</a></p>
           <h4> 
