--- a/index.html
+++ b/index.html
@@ -18,8 +18,15 @@
         <header>
          <b>
           <h1>Evelyn Veramendi Flores</h1>
-          <h2>Seccion</h2>
+          <h2>Prententación</h2>
          </b>
+	<p>
+	     Soy Evelyn Veramendi, estudiante de 1ro de ASIR (Administracion de Redes Informaticos) en el
+	      Instituto IES Gran Capitan de Cordoba, tengo 22 años y mis aficiones son los deportes.
+	     
+             Esta página es para la materia de Lenguaje de mancas y las actividades corespondientes.
+		
+	</p>
         
          <p>
          <a href="lm/index.html">Lenguaje de Marca</a>
