--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <footer>
    <br>
 <addres>
-	"Cordoba,SPain"
-	<h3>Evelyn Veramendi</h3>
+	"Cordoba,España"
+	<h3>IES Gran Capitan</h3>
 </addres>
 </footer>
 </body>
