--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
 	<p>
 	     Soy Evelyn Veramendi, estudiante de 1ro de ASIR (Administracion de Redes Informaticos) en el
 	      Instituto IES Gran Capitan de Cordoba, tengo 22 años y mis aficiones son los deportes.
-	     
+		</p>
+		<p>
              Esta página es para la materia de Lenguaje de mancas y las actividades corespondientes.
 		
 	</p>
         
          <p>
          <a href="lm/index.html">Lenguaje de Marca</a>
+	 <a href="rss-html.xml">Suscribete html</a> 
+	 <a href="rss-xml.xml">Suscribete xml</a> 
          </p>
          <p>
             <i class="material-icons"font-size="40px">rss_feed</i>
