--- a/lm/lm/index.html
+++ b/lm/lm/index.html
@@ -32,6 +32,9 @@
               <a href="tema2/index.html">Tema 2</a>
               <a href="tema3/index.html">Tema 3</a>
               <a href="tema4/index.html">Tema 4</a>
+	      <a href="tema5/index.html">Tema 5</a>
+	      <a href="tema6/index.html">Tema 6</a>
+	      <a href="tema7/index.html">Tema 7</a>
                      
               </nav>
             </h4>
