--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 		
 	</p>
         
-         <p>
+        <nav>
          <a href="lm/index.html">Lenguaje de Marca</a>
 	</p>
-	<p>	
+		<nav>
+		
 	 <a href="rss-html.xml">Suscribete html</a> 
-	</p>
-	<p>
 	 <a href="rss-xml.xml">Suscribete xml</a> 
-         </p>
+     </nav
+         
          <p>
             <i class="material-icons"font-size="40px">rss_feed</i>
          </p>
